<resources>
  <!-- App -->
  <string name="app_name">SwiftPOC</string>

  <!--<string name="hello_world">Hello world!</string>-->

  <!-- Fragments -->
  <string name="title_section1">Section 1</string>
  <string name="title_section2">Section 2</string>
  <string name="title_section3">Section 3</string>

  <!-- Action Menu -->
  <string name="action_settings">Settings</string>

  <!-- Buttons -->
  <string name="button_get_token">Get Token</string>
  <string name="button_list_containers">List Containers</string>
  <string name="button_list_container_objects">List Container Objects</string>
  <string name="button_upload_file">Upload</string>
  <string name="button_download_file">Download</string>
  <string name="button_upload_files_asynctask">Upload AsyncTask</string>
  <string name="button_download_files_asynctask">Download AsyncTask</string>
  <string name="button_get_metadata">Get MetaData</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- Retrofit Error Handling -->
  <string name="error_network">Error Network</string>
  <string name="error_no_response">Error No Response</string>
  <string name="error_network_http_error">Error Network HHTP Error</string>
  <string name="error_unknown">Error Unknown</string>

</resources>
