<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".MainActivity$PlaceholderFragment"
  style="@style/LinearLayout"
  android:orientation="vertical"
  >

  <Button
    android:id="@+id/button_get_token"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_get_token"
    android:onClick="onClickButtonGetToken"
    />

  <Button
    android:id="@+id/button_list_containers"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_list_containers"
    android:onClick="onClickButtonListContainers"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_list_container_objects"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_list_container_objects"
    android:onClick="onClickButtonListContainerObjects"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_upload_file"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_upload_file"
    android:onClick="onClickButtonUploadFile"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_download_file"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_download_file"
    android:onClick="onClickButtonDownloadFile"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_upload_files_asynctask"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_upload_files_asynctask"
    android:onClick="onClickButtonUploadFilesAsyncTask"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_download_files_asynctask"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_download_files_asynctask"
    android:onClick="onClickButtonDownloadFilesAsyncTask"
    android:enabled="true"
    />

  <Button
    android:id="@+id/button_get_metadata"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_get_metadata"
    android:onClick="onClickButtonGetMetaData"
    android:enabled="true"
    />

</LinearLayout>
